[gd_scene load_steps=4 format=2]

[ext_resource path="res://files/scripts/Editor.gd" type="Script" id=1]
[ext_resource path="res://files/scripts/EditTree.gd" type="Script" id=2]
[ext_resource path="res://files/scripts/EditArray.gd" type="Script" id=3]

[node name="Panel" type="Control"]
script = ExtResource( 1 )

[node name="RacesButton" type="Button" parent="."]
margin_left = 153.0
margin_top = 13.0
margin_right = 274.0
margin_bottom = 33.0
text = "Races"

[node name="BodypartsButton" type="Button" parent="."]
margin_left = 13.0
margin_top = 13.0
margin_right = 134.0
margin_bottom = 33.0
text = "Bodyparts"

[node name="edittree" type="Tree" parent="."]
margin_left = 96.0
margin_top = 88.0
margin_right = 1273.0
margin_bottom = 628.0
columns = 2
allow_reselect = true
allow_rmb_select = true
hide_root = true
script = ExtResource( 2 )

[node name="EditArray" type="Panel" parent="."]
margin_left = 529.0
margin_top = 126.0
margin_right = 902.0
margin_bottom = 487.0
script = ExtResource( 3 )

[node name="Tree" type="Tree" parent="EditArray"]
margin_right = 370.0
margin_bottom = 316.0
hide_root = true

[node name="addnewarray" type="Button" parent="EditArray"]
margin_left = 11.0
margin_top = 322.0
margin_right = 108.0
margin_bottom = 351.0
text = "Add New"

[node name="deletearray" type="Button" parent="EditArray"]
margin_left = 137.0
margin_top = 322.0
margin_right = 234.0
margin_bottom = 351.0
text = "Delete"

[node name="closearray" type="Button" parent="EditArray"]
margin_left = 260.0
margin_top = 322.0
margin_right = 357.0
margin_bottom = 351.0
text = "Close"

[connection signal="pressed" from="RacesButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="BodypartsButton" to="." method="_on_BodypartsButton_pressed"]
[connection signal="button_pressed" from="edittree" to="edittree" method="_on_edittree_button_pressed"]
[connection signal="item_selected" from="edittree" to="edittree" method="_on_edittree_item_selected"]
[connection signal="item_edited" from="EditArray/Tree" to="EditArray" method="_on_Tree_item_edited"]
[connection signal="pressed" from="EditArray/addnewarray" to="EditArray" method="_on_addnewarray_pressed"]
[connection signal="pressed" from="EditArray/deletearray" to="EditArray" method="_on_deletearray_pressed"]
[connection signal="pressed" from="EditArray/closearray" to="EditArray" method="_on_closearray_pressed"]
